--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -1,12 +1,28 @@
-<div class="body">
-    <div class="form-floating mb-3">
-        <input type="email" [(ngModel)]="email" class="form-control" placeholder="Ingresa el usuario">
-        <label>Correo electronico</label>
+<div class="container_">
+  <div class="back">
+    <div class="login_form">
+      <div class="form">
+        <div class="logo">
+          <img src="../../../../assets/img/LOGO BAR/bran2-02.png" alt="">
+        </div>
+        <div class="title">
+          <h1>Log In</h1>
+        </div>
+        <div class="information">
+          <div class="input-container">
+            <input type="email" id="email" name="email" [(ngModel)]="email" autocomplete="off" required>
+            <label for="email">Email</label>
+          </div>
+          <div class="input-container">
+            <input type="password" id="password" name="password" [(ngModel)]="password" required>
+            <label for="password">Password</label>
+          </div>
+
+          <button type="button" (click)="login()">enviar</button>
+        </div>
+      </div>
     </div>
-    
-    <div class="form-floating mb-3">
-        <input type="password" [(ngModel)]="password" class="form-control" placeholder="Ingresa la contraseña">
-        <label>Contraseña</label>
-    </div>
-    <button type="button" class="btn btn-primary btn-lg" (click)="login()">Aceptar</button>
+  </div>
 </div>
+
+<script src="../../../../assets/js/user/login/main.js"></script>
