--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="limiter">
-  <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+  <div class="container-login100" style="background-image: url('../../../../assets/img/Back-gorunds/login-background.webp');">
     <div class="wrap-login100">
       <div class="login100-form validate-form">
         <span class="login100-form-logo">
-          <i class="zmdi zmdi-landscape"></i>
+          <div class="img"><a href="javascript:window.location.reload();"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt=""></a></div>
         </span>
         <span class="login100-form-title p-b-34 p-t-27">
           Log in
