--- a/frontend-bar/src/app/components/user/login/login.component.css
+++ b/frontend-bar/src/app/components/user/login/login.component.css
@@ -1,5 +1,6 @@
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Patua+One&family=Protest+Revolution&display=swap');
 
 @font-face {
   font-family: Poppins-Regular;
@@ -182,7 +183,7 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.329);
 }
 
 .wrap-login100 {
@@ -190,12 +191,10 @@ iframe {
   border-radius: 10px;
   overflow: hidden;
   padding: 55px 55px 37px 55px;
-
-  background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
+  background: linear-gradient(80deg, rgba(85,45,46,1) 0%, rgba(233,116,4,1) 59%, rgba(247,198,133,1) 100%);
+  -webkit-box-shadow: 0px 0px 13px 10px rgba(240, 237, 240, 0.486);
+  -moz-box-shadow: 0px 0px 13px 10px rgba(240, 237, 240, 0.486);
+  box-shadow: 0px 0px 13px 10px rgba(240, 237, 240, 0.486);
 }
 
 
@@ -206,10 +205,8 @@ iframe {
   width: 100%;
 }
 
-.login100-form-logo {
-  font-size: 60px; 
-  color: #333333;
 
+.login100-form-logo {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -217,21 +214,48 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 120px;
+  width: 100%;
   height: 120px;
-  border-radius: 50%;
-  background-color: #fff;
-  margin: 0 auto;
+ 
 }
 
+.img:hover{
+  transition: transform 0.2s ease;
+  transform: scale(1.1);
+  overflow: hidden;
+}
+
+.img{
+  width: 150px;
+  border-radius: 50%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -15px;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 15px 10px -8px rgba(240,237,240,1);
+  -moz-box-shadow: 0px 15px 10px -8px rgba(240,237,240,1);
+  box-shadow: 0px 15px 10px -8px rgba(240,237,240,1);
+  margin-bottom: 10px;
+}
+.login100-form-logo img{
+  width: 100%;
+  height: auto;
+  
+}
+
+
 .login100-form-title {
-  font-family: Poppins-Medium;
-  font-size: 30px;
+  
+  font-family: "EB Garamond", serif;
+  margin: 2.5% 0% 2.5% 0%;
+  font-size: 40px;
   color: #fff;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
-
+  font-weight: bold;
   display: block;
 }
 
@@ -247,11 +271,11 @@ iframe {
 }
 
 .input100 {
-  font-family: Poppins-Regular;
-  font-size: 16px;
+  font-family: "EB Garamond", serif;
+  font-size: 20px;
   color: #fff;
   line-height: 1.2;
-
+  letter-spacing: 1px;
   display: block;
   width: 100%;
   height: 45px;
@@ -404,11 +428,8 @@ iframe {
 }
 
 .login100-form-btn {
-  font-family: Poppins-Medium;
-  font-size: 16px;
-  color: #555555;
-  line-height: 1.2;
-
+  font-family: "EB Garamond", serif;
+  font-weight: bold;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -420,15 +441,11 @@ iframe {
   min-width: 120px;
   height: 50px;
   border-radius: 25px;
-
-  background: #9152f8;
-  background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -o-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
-  background: linear-gradient(bottom, #7579ff, #b224ef);
+  border: 1px solid white;
+  color: white !important;
   position: relative;
   z-index: 1;
-
+  letter-spacing: 1px;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
@@ -443,7 +460,6 @@ iframe {
   width: 100%;
   height: 100%;
   border-radius: 25px;
-  background-color: #fff;
   top: 0;
   left: 0;
   opacity: 1;
@@ -456,6 +472,10 @@ iframe {
 
 .login100-form-btn:hover {
   color: #fff;
+  -webkit-box-shadow: 0px 0px 10px 6px rgba(240,237,240,1);
+  -moz-box-shadow: 0px 0px 10px 6px rgba(240,237,240,1);
+  box-shadow: 0px 0px 10px 6px rgba(240,237,240,1);
+
 }
 
 .login100-form-btn:hover:before {
@@ -498,7 +518,7 @@ iframe {
   right: 0px;
   pointer-events: none;
 
-  font-family: Poppins-Regular;
+  font-family: "EB Garamond", serif;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
