--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -5,21 +5,17 @@
         <span class="login100-form-logo">
           <div class="img"><a href="javascript:window.location.reload();"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt=""></a></div>
         </span>
-        <span class="login100-form-title p-b-34 p-t-27">
-          Log in
-        </span>
+        <span class="login100-form-title p-b-34 p-t-27">Iniciar sesión</span>
         <div class="wrap-input100 validate-input" data-validate="Enter username">
-          <input class="input100" type="email" name="email" placeholder="Email" [(ngModel)]="email" autocomplete="off">
+          <input class="input100" type="email" name="email" placeholder="Correo electronico" [(ngModel)]="email" autocomplete="on">
           <span class="focus-input100" data-placeholder="&#xf207;"></span>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Enter password">
-          <input class="input100" type="password" name="pass" placeholder="Password" [(ngModel)]="password">
+          <input class="input100" type="password" name="pass" placeholder="Contraseña" [(ngModel)]="password">
           <span class="focus-input100" data-placeholder="&#xf191;"></span>
         </div>
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn" type="button" (click)="login()">
-            Login
-          </button>
+          <button class="login100-form-btn" type="button" (click)="login()">Iniciar sesión</button>
         </div>
       </div>
     </div>
