--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -2,39 +2,29 @@
   <div class="container-login100" style="background-image: url('../../../../assets/img/Back-gorunds/login-background.webp');">
     <div class="wrap-login100">
       <div class="login100-form validate-form">
+        <div class="language-buttons">
+          <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
+        </div>
         <span class="login100-form-logo">
-          <div class="img"><a href="javascript:window.location.reload();"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt=""></a></div>
+          <div class="img">
+            <a href="javascript:window.location.reload();">
+              <img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="">
+            </a>
+          </div>
         </span>
-        <span class="login100-form-title p-b-34 p-t-27">Iniciar sesión</span>
+        <span class="login100-form-title p-b-34 p-t-27">{{ "login" | translate }}</span>
         <div class="wrap-input100 validate-input" data-validate="Enter username">
-          <input class="input100" type="email" name="email" placeholder="Correo electronico" [(ngModel)]="email" autocomplete="on">
+          <input class="input100" type="email" name="email" placeholder="{{ 'email' | translate }}" [(ngModel)]="email" autocomplete="on">
           <span class="focus-input100" data-placeholder="&#xf207;"></span>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Enter password">
-          <input class="input100" type="password" name="pass" placeholder="Contraseña" [(ngModel)]="password">
+          <input class="input100" type="password" name="pass" placeholder="{{ 'password' | translate }}" [(ngModel)]="password">
           <span class="focus-input100" data-placeholder="&#xf191;"></span>
         </div>
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn" type="button" (click)="login()">Iniciar sesión</button>
+          <button class="login100-form-btn" type="button" (click)="login()">{{ "login" | translate }}</button>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div id="dropDownSelect1"></div>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/bootstrap/js/popper.js"></script>
-<script src="../../../../assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/daterangepicker/moment.min.js"></script>
-<script src="../../../../assets/vendor/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-<script src="../../../../assets/js/main.js"></script>
