add messages translate

--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="title">
-    <button class="btn btn-primary" routerLink="/event/insert">Add event</button>
+    <button class="btn btn-primary" routerLink="/event/insert">{{"addEvent" | translate}}</button>
 </div>
 
     <div class="language-buttons">
