--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,10 +1,9 @@
+<app-navbar></app-navbar>
+
 <div class="title">
     <button class="btn btn-primary" routerLink="/event/insert">{{ "addEvent" | translate }}</button>
 </div>
 
-<div class="language-buttons">
-    <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
-</div>
 
 <div class="container mt-2 text-center">
     <h1>{{ "events" | translate }}</h1>
@@ -30,6 +29,11 @@
         </tbody>
     </table>
 </div>
+
+
+
+
+
 
 <div id="card">
     <form [formGroup]="form" (ngSubmit)="updateEvent()">
