--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,19 @@
+
+<nav class="navbar">
+    <div class="logo">
+        <img src="../../../assets/img/LOGO BAR/bran2-01.png" alt="">
+    </div>
+    <div class="options">
+
+    </div>
+
+</nav>
+
+
+
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,6 +40,9 @@
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
         </ul>
+        <div class="language-buttons">
+            <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
+          </div>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="button" (click)="logOut()">LogOut</button>
