--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,52 +1,33 @@
-
 <nav class="navbar">
     <div class="logo">
         <img src="../../../assets/img/LOGO BAR/bran2-01.png" alt="">
     </div>
     <div class="options">
-
-    </div>
-
-</nav>
-
-
-
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-        </ul>
+        <a href="/event">{{ "events" | translate}}</a>
+        <a href="/product">{{"products" | translate}}</a>
+        <a href="/users">{{"users" | translate}}</a>
+        <div class="exit">
+            <a (click)="logOut()">{{"exit" | translate}}</a>
+        </div>
         <div class="language-buttons">
             <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
-          </div>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="button" (click)="logOut()">LogOut</button>
-        </form>
         </div>
     </div>
+    <div class="menu_ham">
+        <p id="p_h">Hamburguer</p>
+    </div>
 </nav>
+<div class="options_dropdown">
+    <div class="links">
+        <a href="/event">{{ "events" | translate}}</a>   
+        <a href="/product">{{"products" | translate}}</a>   
+        <a href="/users">{{"users" | translate}}</a>
+       
+    </div>
+    <div class="exit">
+        <a (click)="logOut()">{{"exit" | translate}}</a>
+    </div>
+    <div class="language-buttons">
+        <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
+    </div>
+</div>
