--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -5,6 +5,7 @@
     <div class="option_container">
         <a href="HollowBar-initial/client"><fa-icon [icon]="iconHouse"></fa-icon>| {{"home" | translate}}</a>
         <a href="#"><fa-icon [icon]="iconPhone"></fa-icon>| {{"contactUs" | translate }}</a>
+        <a href="#"><fa-icon [icon]="iconCalendar"></fa-icon>| {{"events" | translate }}</a>
         <a href="#footer"><fa-icon [icon]="iconCar"></fa-icon>| {{"order" | translate}}</a>
     </div>
     <div class="language-buttons">
