--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,33 +1,31 @@
 <nav class="navbar">
-    <div class="logo">
-        <img src="../../../assets/img/LOGO BAR/bran2-01.png" alt="">
-    </div>
-    <div class="options">
-        <a href="/event">{{ "events" | translate}}</a>
-        <a href="/product">{{"products" | translate}}</a>
-        <a href="/users">{{"users" | translate}}</a>
-        <div class="exit">
-            <a (click)="logOut()">{{"exit" | translate}}</a>
-        </div>
-        <div class="language-buttons">
-            <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
-        </div>
-    </div>
-    <div class="menu_ham">
-        <p id="p_h">Hamburguer</p>
-    </div>
-</nav>
-<div class="options_dropdown">
-    <div class="links">
-        <a href="/event">{{ "events" | translate}}</a>   
-        <a href="/product">{{"products" | translate}}</a>   
-        <a href="/users">{{"users" | translate}}</a>
-       
-    </div>
-    <div class="exit">
+    
+    <div class="option_container">
+        <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
+        <a href="#"> {{"products" | translate }}</a>
+        <a href="#"> {{"events" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
     <div class="language-buttons">
-        <button class="ESEN" (click)="es()">ES</button>|<button class="ESEN" (click)="en()">EN</button>
+        <button (click)="es()" class="es">ES</button>
+        <button (click)="en()" class="en">EN</button>
+    </div>  
+    <div class="menu_hamburguer">
+        <fa-icon [icon]="iconMenu" id="manu_hamb"></fa-icon>
     </div>
+    <div class="logo_nav">
+        <a href="hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
+    </div>
+    
+</nav>
+<div class="option_container_menu">
+    <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
+    <a href="#"> {{"products" | translate }}</a>
+    <a href="#"> {{"events" | translate }}</a>
+    <a (click)="logOut()">{{"exit" | translate}}</a>
+    <div class="language-buttons_h">
+        <button (click)="es()" class="es">ES</button>
+        <button (click)="en()" class="en">EN</button>
+    </div>  
+   
 </div>
