--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
     
     <div class="option_container">
         <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
-        <a href="#"> {{"products" | translate }}</a>
-        <a href="#"> {{"events" | translate }}</a>
+        <a href="/user"> {{"products" | translate }}</a>
+        <a href="/event"> {{"events" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
     <div class="language-buttons">
@@ -14,14 +14,14 @@
         <fa-icon [icon]="iconMenu" id="manu_hamb"></fa-icon>
     </div>
     <div class="logo_nav">
-        <a href="hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
+        <a href=""><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
     </div>
     
 </nav>
 <div class="option_container_menu">
     <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
     <a href="#"> {{"products" | translate }}</a>
-    <a href="#"> {{"events" | translate }}</a>
+    <a href="/events"> {{"events" | translate }}</a>
     <a (click)="logOut()">{{"exit" | translate}}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
