--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -14,7 +14,7 @@
         </span>
         <span class="login100-form-title p-b-34 p-t-27">{{ "login" | translate }}</span>
         <div class="wrap-input100 validate-input" data-validate="Enter username">
-          <input class="input100" type="email" name="email" placeholder="{{ 'email' | translate }}" [(ngModel)]="email" autocomplete="on">
+          <input class="input100" type="email" name="email" placeholder="{{ 'email' | translate }}" [(ngModel)]="email" autocomplete="off">
           <span class="focus-input100" data-placeholder="&#xf207;"></span>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Enter password">
