--- a/frontend-bar/src/app/components/landing/footer/footer.component.html
+++ b/frontend-bar/src/app/components/landing/footer/footer.component.html
@@ -1,3 +1,18 @@
 <footer class="footer" id="footer">
-  
+    <div class="container">
+        <div class="social_net">
+            <div class="icons_">
+                <a href="https://www.facebook.com/david.forero.50159"><fa-icon [icon]="IconFacebook" id="Icons"></fa-icon></a>
+                <a href=""><fa-icon [icon]="IconX" id="Icons"></fa-icon></a>
+                <a href="https://www.instagram.com/__david_forero"><fa-icon [icon]="IconInstagram" id="Icons"></fa-icon></a>
+            </div>
+            <div class="hr"></div>
+        </div>
+        <div class="logo">
+            <div class="img">
+               <a href="hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-02.png" alt=""></a> 
+            </div>
+        </div>
+    </div>
+
 </footer>
