--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -1,3 +1,29 @@
 <app-land-nav></app-land-nav>
 
+<div class="banner">
+
+</div>
+
+<div id="carousel" class="carousel">
+    <button class="arrow prev">⇦</button>
+    <div class="gallery">
+        <ul>
+            <li *ngFor="let e of listEvent">
+                <div class="card_event">
+                    <div class="card_head">
+                        <h1></h1>
+                    </div>
+                    <div class="card_body">
+                        <h3>Año</h3>
+                        <h3>Mes</h3>
+                        <h3>Dia</h3>
+                        <h3>Hora</h3>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <button class="arrow next">⇨</button>
+</div>
+
 <app-footer></app-footer>
