--- a/frontend-bar/src/app/components/navbar/navbar.component.css
+++ b/frontend-bar/src/app/components/navbar/navbar.component.css
@@ -1,35 +1,26 @@
 @font-face {
     font-family: "Acumin Variable Concept";
     src: url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.eot");
-    src: url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.svg#Acumin Variable Concept")format("svg");
+    src: url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff") format("woff"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.svg#Acumin Variable Concept") format("svg");
     font-weight: 400;
-}
-
-
-
-.navbar {
+  }
+  .navbar {
     background-color: #3A0709;
     width: 100%;
     height: 65px;
     display: flex;
     justify-content: center;
     gap: 1%;
-}
-
-.option_container {
+  }
+  .option_container {
     width: 80%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 3%;
-}
-
-.option_container a {
+  }
+  .option_container a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,204 +29,171 @@
     font-family: "Acumin Variable Concept";
     font-size: 17px;
     height: 60%;
-}
-
-.option_container a:hover {
+  }
+  .option_container a:hover {
     border-bottom: 3px solid white;
-}
-
-.logo_nav {
+  }
+  .logo_nav {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-}
-
-.logo_nav img {
+  }
+  .logo_nav img {
     width: 70px;
     height: 100%;
     margin-left: 15px;
-}
-
-.logo_nav img:hover {
-    -webkit-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-    -moz-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-    box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
+  }
+  .logo_nav img:hover {
+    -webkit-box-shadow: 0px -1px 10px 1.5px #ffffff;
+    -moz-box-shadow: 0px -1px 10px 1.5px #ffffff;
+    box-shadow: 0px -1px 10px 1.5px #ffffff;
     border-radius: 50%;
     transition: 1s;
-}
-
-fa-icon {
+  }
+  fa-icon {
     margin-right: 5px;
-}
-
-.language-buttons {
+  }
+  .language-buttons {
     display: flex;
     align-items: center;
     color: white;
     height: 10px;
-}
-
-.language-buttons button:hover {
-    -webkit-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-    -moz-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-    box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
+  }
+  .language-buttons button:hover {
+    -webkit-box-shadow: 0px -1px 10px 1.5px #ffffff;
+    -moz-box-shadow: 0px -1px 10px 1.5px #ffffff;
+    box-shadow: 0px -1px 10px 1.5px #ffffff;
     border-radius: 50%;
-}
-
-.language-buttons button {
+  }
+  .language-buttons button {
     color: white;
     background-color: rgba(240, 248, 255, 0);
     border: none;
     margin: 0;
     height: 30px;
-    
-}
-
-.es {
+  }
+  .es {
     border-right: 1px solid white !important;
     font-family: "Acumin Variable Concept";
-}
-.en {
+  }
+  .en {
     border-left: 1px solid white !important;
     font-family: "Acumin Variable Concept";
-}
-
-
-.es:focus {
+  }
+  .es:focus {
     text-decoration: underline;
-}
-
-.en:focus {
+  }
+  .en:focus {
     text-decoration: underline;
-}
-
-.option_container_menu {
+  }
+  .option_container_menu {
     display: none;
-}
-
-.menu_hamburguer {
+  }
+  .menu_hamburguer {
     display: none;
-}
-
-
-
-
-
-
-@media screen and (min-width: 240px) and (max-width: 520px) {
+  }
+  @media screen and (min-width: 240px) and (max-width: 520px) {
     .option_container {
-        display: none;
+      display: none;
     }
-
     .language-buttons {
-        display: none;
+      display: none;
     }
-
     .menu_hamburguer {
-        display: block;
+      display: block;
     }
-
     .navbar {
-        justify-content: space-around;
-        gap: 50%;
-        width: 100% !important;
+      justify-content: space-around;
+      gap: 50%;
+      width: 100% !important;
     }
-
     .option_container_menu.show {
-        display: block;
-        background-color: rgb(57 7 8);
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
+      display: block;
+      background-color: #390708;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
     }
-
     .logo_nav img {
-        width: 60px;
+      width: 60px;
     }
-
     .option_container_menu a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        border-bottom: 1px solid white;
-        border-top: 1px solid white;
-        font-family: 'Oswald Regular', sans-serif;
-        font-size: 14px;
-        letter-spacing: 2px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      padding: 10px;
+      color: white;
+      text-decoration: none;
+      border-bottom: 1px solid white;
+      border-top: 1px solid white;
+      font-family: 'Oswald Regular', sans-serif;
+      font-size: 14px;
+      letter-spacing: 2px;
     }
-
     .menu_hamburguer fa-icon {
-        color: white;
-        font-size: 32px;
-        font-weight: bold;
+      color: white;
+      font-size: 32px;
+      font-weight: bold;
     }
-
     .language-buttons_h {
-        display: flex;
-        align-items: center;
-        justify-content: end;
-        font-family: 'Oswald Regular', sans-serif;
-        color: white;
-        padding: 10px;
-        letter-spacing: 2px;
-
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      font-family: 'Oswald Regular', sans-serif;
+      color: white;
+      padding: 10px;
+      letter-spacing: 2px;
     }
-
     .language-buttons_h button:hover {
-        -webkit-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-        -moz-box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-        box-shadow: 0px -1px 10px 1.5px rgba(255, 255, 255, 1);
-        border-radius: 50%;
+      -webkit-box-shadow: 0px -1px 10px 1.5px #ffffff;
+      -moz-box-shadow: 0px -1px 10px 1.5px #ffffff;
+      box-shadow: 0px -1px 10px 1.5px #ffffff;
+      border-radius: 50%;
     }
-
     .language-buttons_h button {
-        color: white;
-        background-color: rgba(240, 248, 255, 0);
-        border: none;
-        margin: 0;
-        font-size: 12px;
+      color: white;
+      background-color: rgba(240, 248, 255, 0);
+      border: none;
+      margin: 0;
+      font-size: 12px;
     }
-}
-
-@media screen and (min-width: 521px) and (max-width:720px) {
-    .option_container{
-        width: 70%;
+  }
+  @media screen and (min-width: 521px) and (max-width: 720px) {
+    .option_container {
+      width: 70%;
     }
-    .option_container a{
-        font-size: 14px;
+    .option_container a {
+      font-size: 14px;
     }
-    .language-buttons .es,.en{
-        font-size: 14px;
+    .language-buttons .es,
+    .en {
+      font-size: 14px;
     }
-    .logo_nav img{
-        width: 60px;
-        margin-left: 5px;
+    .logo_nav img {
+      width: 60px;
+      margin-left: 5px;
     }
-    
-}
-
-@media screen and (min-width: 721px) and (max-width:1024px) {
-    .option_container{
-        width: 60%;
+  }
+  @media screen and (min-width: 721px) and (max-width: 1024px) {
+    .option_container {
+      width: 60%;
     }
-    .option_container a{
-        font-size: 14px;
+    .option_container a {
+      font-size: 14px;
     }
-    .language-buttons .es,.en{
-        font-size: 14px;
+    .language-buttons .es,
+    .en {
+      font-size: 14px;
     }
-    .language-buttons{
-        margin-left: 15px;
+    .language-buttons {
+      margin-left: 15px;
     }
-    .logo_nav img{
-        width: 60px;
-        margin-left: 15px;
+    .logo_nav img {
+      width: 60px;
+      margin-left: 15px;
     }
-    
-}
+  }
+  
