section-up_footer

--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -26,4 +26,23 @@
     <button class="arrow next">⇨</button>
 </div>
 
+<div class="about_bar">
+    <div class="images content">
+      <div id="first">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Takumi_in_Sailing_Bar.jpg/170px-Takumi_in_Sailing_Bar.jpg" alt="">
+      </div>
+      <div id="second">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR87fyBhllB7fXmszqCqvD_5rbbVGgjyKbhJUF6KH2URw&s" alt="">
+      </div>
+      <div id="third">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxrh1if21jtQ9viKnY3UDDYLwTwh5izG1ZmxHflufgwA&s" alt="">
+      </div>
+    </div>
+    <div class="text_a content">
+      <p id="life_">Vive</p>
+      <p id="disfrut">Y DISFRUTA</p>
+      <p id="more_t">Disfruta de nuestro acogedor bar, donde cada trago cuenta una historia y una experiencia única. Estamos listos para sorprenderte con creaciones originales y clásicos reinventados. Ven y descubre un lugar donde la buena compañía y los buenos tragos se encuentran.</p>
+    </div>
+  </div>
+
 <app-footer></app-footer>
