--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -4,7 +4,7 @@
 
 </div>
 
-<div id="carousel" class="carousel">
+<!-- <div id="carousel" class="carousel">
     <button class="arrow prev">⇦</button>
     <div class="gallery">
         <ul>
@@ -24,7 +24,20 @@
         </ul>
     </div>
     <button class="arrow next">⇨</button>
+</div> -->
+  
+<div class="event-container">
+
+  <div class="informative-text">
+    <p>Acá texto informativo</p>
+  </div>
+
+  <div class="calendar">
+    <full-calendar [options]="calendarOptions"  id="calendar-events"></full-calendar>
+  </div>
+
 </div>
+
 
 <div class="about_bar">
     <div class="images content">
@@ -39,8 +52,8 @@
       </div>
     </div>
     <div class="text_a content">
-      <p id="life_">Vive</p>
-      <p id="disfrut">Y DISFRUTA</p>
+      <p id="life_">{{"life" | translate}}</p>
+      <p id="disfrut">{{"disfrut" | translate}}</p>
       <p id="more_t">Disfruta de nuestro acogedor bar, donde cada trago cuenta una historia y una experiencia única. Estamos listos para sorprenderte con creaciones originales y clásicos reinventados. Ven y descubre un lugar donde la buena compañía y los buenos tragos se encuentran.</p>
     </div>
   </div>
