--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -28,9 +28,7 @@
   
 <div class="event-container">
 
-  <div class="informative-text">
-    <p>Acá texto informativo</p>
-  </div>
+ 
 
   <div class="calendar">
     <full-calendar [options]="calendarOptions"  id="calendar-events"></full-calendar>
@@ -54,7 +52,7 @@
     <div class="text_a content">
       <p id="life_">{{"life" | translate}}</p>
       <p id="disfrut">{{"disfrut" | translate}}</p>
-      <p id="more_t">Disfruta de nuestro acogedor bar, donde cada trago cuenta una historia y una experiencia única. Estamos listos para sorprenderte con creaciones originales y clásicos reinventados. Ven y descubre un lugar donde la buena compañía y los buenos tragos se encuentran.</p>
+      <p id="more_t">{{"moreText" | translate}}</p>
     </div>
   </div>
 
