--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -11,7 +11,7 @@
         <button (click)="en()" class="en">EN</button>
     </div>  
     <div class="menu_hamburguer">
-        <fa-icon [icon]="iconMenu" id="manu_hamb"></fa-icon>
+        <fa-icon [icon]="iconMenu" id="menu_hamb"></fa-icon>
     </div>
     <div class="logo_nav">
         <a href="hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
